--- a/css/IFM/footer.css
+++ b/css/IFM/footer.css
@@ -55,6 +55,7 @@ footer img {
   }
 }
 
+/* Estilos específicos para pantallas medianas (min-width: 768px y max-width: 1199px) */
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   footer {
     height: 200px;
@@ -77,6 +78,7 @@ footer img {
   }
 }
 
+/* Estilos específicos para pantallas pequeñas (max-width: 767px) */
 @media only screen and (max-width: 767px) {
   footer {
     height: 12.5rem;
