--- a/css/innov8/article.css
+++ b/css/innov8/article.css
@@ -103,10 +103,10 @@ article .content-ubi .content-img #eeuu:hover {
   }
 }
 
+/* Estilos para pantallas medianas */
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   article {
     height: 38rem;
-    color: white;
     flex-direction: column;
   }
 
@@ -130,7 +130,6 @@ article .content-ubi .content-img #eeuu:hover {
   article {
     height: fit-content;
     padding-bottom: 2rem;
-    color: white;
     flex-direction: column;
   }
 
@@ -138,10 +137,7 @@ article .content-ubi .content-img #eeuu:hover {
     font-size: 25px;
   }
 
-  article h2 {
-    font-size: 15px;
-  }
-
+  article h2,
   article p {
     font-size: 15px;
   }
