--- a/css/innov8/footer.css
+++ b/css/innov8/footer.css
@@ -55,6 +55,7 @@ footer img {
   }
 }
 
+/* Estilos para pantallas medianas */
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   footer {
     height: 12.5rem;
@@ -76,6 +77,7 @@ footer img {
   }
 }
 
+/* Estilos para pantallas pequeñas */
 @media only screen and (max-width: 767px) {
   footer {
     height: 12.5rem;
