--- a/css/innov8/home.css
+++ b/css/innov8/home.css
@@ -30,6 +30,7 @@ header .static-image {
   }
 }
 
+/* Estilos para pantallas medianas */
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   header {
     height: 100vh;
