--- a/css/olimpia/footer.css
+++ b/css/olimpia/footer.css
@@ -51,6 +51,7 @@ footer img {
   }
 }
 
+/* Estilos específicos para pantallas medianas */
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   footer .contain {
     width: 50%;
