--- a/css/olimpia/home.css
+++ b/css/olimpia/home.css
@@ -30,12 +30,14 @@ header .static-image {
   }
 }
 
+/* Estilos específicos para pantallas medianas */
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   header {
     height: 974px;
   }
 }
 
+/* Estilos específicos para pantallas pequeñas */
 @media only screen and (max-width: 767px) {
   header {
     height: 100vh;
