--- a/css/olimpia/section.css
+++ b/css/olimpia/section.css
@@ -15,12 +15,14 @@ section {
   }
 }
 
+/* Estilos específicos para pantallas medianas */
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   section {
     height: 150px;
   }
 }
 
+/* Estilos específicos para pantallas pequeñas */
 @media only screen and (max-width: 767px) {
   section {
     height: 4rem;
