--- a/css/olimpia/contact.css
+++ b/css/olimpia/contact.css
@@ -1,188 +1,136 @@
+/* Estilos generales (no cambian en @media) */
+.section {
+  display: flex;
+  background-color: #191919;
+  width: 100%;
+  color: white;
+  flex-direction: column;
+}
+
+.section h1 {
+  color: var(--amarillo);
+}
+
+.section .content-contact {
+  display: flex;
+  padding-top: 40px;
+  padding-left: 100px;
+  font-size: 24px;
+  flex-direction: column;
+  text-align: start;
+}
+
+.section .content-contact img {
+  filter: invert(75%) sepia(83%) saturate(511%) hue-rotate(356deg)
+    brightness(100%) contrast(107%);
+}
+
+.section .content-ubi {
+  display: flex;
+  flex-direction: column;
+}
+
+.section .content-ubi .ubi {
+  display: flex;
+}
+
+.section .content-ubi .ubi .content-img {
+  display: flex;
+  width: 25%;
+  padding-top: 40px;
+  align-items: center;
+  flex-direction: column;
+}
+
+.section .content-ubi .ubi .content-img img {
+  padding-bottom: 20px;
+  border-radius: 5px;
+  transition: transform 0.3s ease;
+}
+
+.section .content-ubi .title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  padding-top: 40px;
+}
+
+.section .content-ubi .content-img #mexico:hover {
+  border-radius: 5px;
+  content: url(../../assets/images/Flag_of_Mexico.png);
+}
+
+.section .content-ubi .content-img #colombia:hover {
+  border-radius: 5px;
+  content: url(../../assets/svg/Flag_Colombia.svg);
+}
+
+.section .content-ubi .content-img #eeuu:hover {
+  border-radius: 5px;
+  content: url(../../assets/images/Flag_of_the_United_States.png);
+}
+
+/* Estilos específicos para pantallas grandes */
 @media only screen and (min-width: 1200px) {
   .section {
-    display: flex;
-    background-color: #191919;
-    width: 100%;
     height: 420px;
-    color: white;
-  }
-
-  .section h1 {
-    color: var(--amarillo);
   }
 
   .section .content-contact {
-    display: flex;
     width: 30%;
     height: 100%;
-    padding-top: 40px;
-    padding-left: 100px;
-    font-size: 24px;
-    flex-direction: column;
-    text-align: start;
-  }
-
-  .section .content-contact img {
-    filter: invert(75%) sepia(83%) saturate(511%) hue-rotate(356deg)
-      brightness(100%) contrast(107%);
   }
 
   .section .content-ubi {
-    display: flex;
     width: 70%;
     height: 100%;
-    flex-direction: column;
-  }
-
-  .section .content-ubi .ubi {
-    display: flex;
-  }
-
-  .section .content-ubi .ubi .content-img {
-    display: flex;
-    width: 25%;
-    height: 100%;
-    padding-top: 40px;
-    align-items: center;
-    flex-direction: column;
   }
 
   .section .content-ubi .ubi .content-img img {
     width: 75%;
     height: 75%;
-    padding-bottom: 20px;
-    border-radius: 5px;
-    transition: transform 0.3s ease;
   }
 
   .section .content-ubi .ubi .content-img img:hover {
     transform: translateY(-10px);
   }
-
-  .section .content-ubi .title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
-    padding-top: 40px;
-  }
-
-  .section .content-ubi .content-img #mexico:hover {
-    border-radius: 5px;
-    content: url(../../assets/images/Flag_of_Mexico.png);
-  }
-
-  .section .content-ubi .content-img #colombia:hover {
-    border-radius: 5px;
-    content: url(../../assets/svg/Flag_Colombia.svg);
-  }
-
-  .section .content-ubi .content-img #eeuu:hover {
-    border-radius: 5px;
-    content: url(../../assets/images/Flag_of_the_United_States.png);
-  }
 }
 
+/* Estilos específicos para pantallas medianas */
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   .section {
-    display: flex;
-    background-color: #191919;
-    width: 100%;
     height: 38rem;
-    color: white;
-    flex-direction: column;
-  }
-
-  .section h1 {
-    color: var(--amarillo);
   }
 
   .section .content-contact {
-    display: flex;
     width: 100%;
     height: 40%;
-    padding-top: 40px;
-    padding-left: 100px;
-    font-size: 24px;
-    flex-direction: column;
-    text-align: start;
-  }
-
-  .section .content-contact img {
-    filter: invert(75%) sepia(83%) saturate(511%) hue-rotate(356deg)
-      brightness(100%) contrast(107%);
   }
 
   .section .content-ubi {
-    display: flex;
     width: 100%;
     height: 70%;
-    flex-direction: column;
-  }
-
-  .section .content-ubi .ubi {
-    display: flex;
-  }
-
-  .section .content-ubi .ubi .content-img {
-    display: flex;
-    width: 25%;
-    height: 100%;
-    padding-top: 40px;
-    align-items: center;
-    flex-direction: column;
   }
 
   .section .content-ubi .ubi .content-img img {
     width: 75%;
     height: 75%;
-    padding-bottom: 20px;
-    border-radius: 5px;
-    transition: transform 0.3s ease;
   }
 
   .section .content-ubi .ubi .content-img img:hover {
     transform: translateY(-10px);
   }
-
-  .section .content-ubi .title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
-    padding-top: 40px;
-  }
-
-  .section .content-ubi .content-img #mexico:hover {
-    border-radius: 5px;
-    content: url(../../assets/images/Flag_of_Mexico.png);
-  }
-
-  .section .content-ubi .content-img #colombia:hover {
-    border-radius: 5px;
-    content: url(../../assets/svg/Flag_Colombia.svg);
-  }
-
-  .section .content-ubi .content-img #eeuu:hover {
-    border-radius: 5px;
-    content: url(../../assets/images/Flag_of_the_United_States.png);
-  }
 }
 
+/* Estilos específicos para pantallas pequeñas */
 @media only screen and (max-width: 767px) {
   .section {
-    display: flex;
-    background-color: #191919;
-    width: 100%;
-    /* height: 80rem; */
     height: fit-content;
     padding-bottom: 2rem;
-    color: white;
-    flex-direction: column;
   }
 
   .section h1 {
-    color: var(--amarillo);
     font-size: 25px;
   }
 
@@ -195,76 +143,19 @@
   }
 
   .section .content-contact {
-    display: flex;
-    width: 100%;
     height: 20%;
-    padding-top: 40px;
-    padding-left: 100px;
-    font-size: 24px;
-    flex-direction: column;
-    text-align: start;
-  }
-
-  .section .content-contact img {
-    filter: invert(75%) sepia(83%) saturate(511%) hue-rotate(356deg)
-      brightness(100%) contrast(107%);
   }
 
   .section .content-ubi {
-    display: flex;
-    width: 100%;
     height: 80%;
-    flex-direction: column;
-  }
-
-  .section .content-ubi .ubi {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  .section .content-ubi .ubi .content-img {
-    display: flex;
-    width: 25%;
-    height: 100%;
-    padding-top: 40px;
-    align-items: center;
-    flex-direction: column;
   }
 
   .section .content-ubi .ubi .content-img img {
     width: 250%;
     height: 100%;
-    padding-bottom: 20px;
-    border-radius: 5px;
-    transition: transform 0.3s ease;
   }
 
   .section .content-ubi .ubi .content-img img:hover {
     transform: translateY(-10px);
-  }
-
-  .section .content-ubi .title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
-    padding-top: 40px;
-  }
-
-  .section .content-ubi .content-img #mexico:hover {
-    border-radius: 5px;
-    content: url(../../assets/images/Flag_of_Mexico.png);
-  }
-
-  .section .content-ubi .content-img #colombia:hover {
-    border-radius: 5px;
-    content: url(../../assets/svg/Flag_Colombia.svg);
-  }
-
-  .section .content-ubi .content-img #eeuu:hover {
-    border-radius: 5px;
-    content: url(../../assets/images/Flag_of_the_United_States.png);
   }
 }
