--- a/css/olimpia/home.css
+++ b/css/olimpia/home.css
@@ -1,83 +1,59 @@
+/* Estilos generales (no cambian en @media) */
+header {
+  display: flex;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0);
+  justify-content: center;
+  align-items: center;
+}
+
+header .container {
+  height: 2000px; /* Simula contenido largo para el scroll */
+}
+
+header .static-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-size: cover;
+  background-attachment: fixed;
+  z-index: -1; /* Para que quede detrás del contenido */
+  filter: brightness(70%);
+}
+
+/* Estilos específicos para pantallas grandes */
 @media only screen and (min-width: 1200px) {
   header {
-    display: flex;
-    width: 100%;
     height: 974px;
-    background-color: rgba(255, 255, 255, 0);
-    justify-content: center;
-    align-items: center;
-  }
-
-  header .container {
-    height: 2000px; /* Simula contenido largo para el scroll */
   }
 
   header .static-image {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
     height: 100%;
     /* background-image: url("tu-imagen.jpg"); */
-    background-size: cover;
-    background-attachment: fixed;
-    z-index: -1; /* Para que quede detrás del contenido */
-    filter: brightness(70%);
   }
 }
 
+/* Estilos específicos para pantallas medianas */
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   header {
-    display: flex;
-    width: 100%;
     height: 974px;
-    background-color: rgba(255, 255, 255, 0);
-    justify-content: center;
-    align-items: center;
-  }
-
-  header .container {
-    height: 2000px; /* Simula contenido largo para el scroll */
   }
 
   header .static-image {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
     height: 100%;
     /* background-image: url("tu-imagen.jpg"); */
-    background-size: cover;
-    background-attachment: fixed;
-    z-index: -1; /* Para que quede detrás del contenido */
-    filter: brightness(70%);
   }
 }
 
+/* Estilos específicos para pantallas pequeñas */
 @media only screen and (max-width: 767px) {
   header {
-    display: flex;
-    width: 100%;
     height: 100vh;
-    background-color: rgba(255, 255, 255, 0);
-    justify-content: center;
-    align-items: center;
-  }
-
-  header .container {
-    height: 2000px;
   }
 
   header .static-image {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
     height: 100%;
-    background-size: cover;
-    background-attachment: fixed;
-    z-index: -1;
-    filter: brightness(70%);
   }
 
   header #logo {
