--- a/css/olimpia/section.css
+++ b/css/olimpia/section.css
@@ -1,38 +1,30 @@
+/* Estilos generales (para todas las resoluciones) */
+section {
+  display: flex;
+  background-color: #191919;
+  width: 100%;
+  padding-left: 15%;
+  font-size: 40px;
+  color: white;
+}
+
+/* Estilos específicos para pantallas grandes */
 @media only screen and (min-width: 1200px) {
   section {
-    display: flex;
-    background-color: #191919;
-    width: 100%;
     height: 150px;
-    align-items: center;
-    padding-left: 15%;
-    font-size: 40px;
-    color: white;
   }
 }
 
+/* Estilos específicos para pantallas medianas */
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   section {
-    display: flex;
-    background-color: #191919;
-    width: 100%;
     height: 150px;
-    align-items: center;
-    padding-left: 15%;
-    font-size: 40px;
-    color: white;
   }
 }
 
+/* Estilos específicos para pantallas pequeñas */
 @media only screen and (max-width: 767px) {
   section {
-    display: flex;
-    background-color: #191919;
-    width: 100%;
     height: 4rem;
-    align-items: center;
-    padding-left: 15%;
-    font-size: 40px;
-    color: white;
   }
 }
