--- a/css/IFM/general.css
+++ b/css/IFM/general.css
@@ -2,12 +2,13 @@
   font-family: sans-serif;
 }
 
-body{
-  width: 100vw;
+body {
+  width: 99vw;
+  /* width: 100%; */
   height: 100%;
 }
 
-.contain-father{
+.contain-father {
   position: relative;
   width: 100%;
   height: 100%;
