--- a/css/innov8/home.css
+++ b/css/innov8/home.css
@@ -40,6 +40,10 @@ header .static-image {
 
 /* Estilos para pantallas pequeñas */
 @media only screen and (max-width: 767px) {
+  header {
+    height: 100vh;
+  }
+
   header #logo {
     max-width: 100%;
   }
