--- a/css/innov8/main.css
+++ b/css/innov8/main.css
@@ -2,6 +2,7 @@
 main {
   display: flex;
   width: 100%;
+  height: 700px;
   background-color: white;
 }
 
@@ -49,7 +50,7 @@ main #contain-1 .contain-text h1 {
 
 main #contain-1 .contain-service {
   display: flex;
-  width: 50%;
+  /* width: 50%; */
   height: 100%;
   position: relative;
   color: white;
@@ -89,6 +90,10 @@ main #contain-1 .contain-service .button-container button:hover {
 @media only screen and (min-width: 1200px) {
   main {
     height: 700px;
+  }
+
+  main #contain-1 .contain-text {
+    width: 50%;
   }
 
   main #contain-1 .contain-text h1 {
