--- a/css/olimpia/contact.css
+++ b/css/olimpia/contact.css
@@ -4,7 +4,6 @@
   background-color: #191919;
   width: 100%;
   color: white;
-  flex-direction: column;
 }
 
 .section h1 {
@@ -13,6 +12,7 @@
 
 .section .content-contact {
   display: flex;
+  width: 100%;
   padding-top: 40px;
   padding-left: 100px;
   font-size: 24px;
@@ -27,6 +27,7 @@
 
 .section .content-ubi {
   display: flex;
+  width: 100%;
   flex-direction: column;
 }
 
@@ -101,15 +102,16 @@
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   .section {
     height: 38rem;
+    flex-direction: column;
   }
 
   .section .content-contact {
-    width: 100%;
+    /* width: 100%; */
     height: 40%;
   }
 
   .section .content-ubi {
-    width: 100%;
+    /* width: 100%; */
     height: 70%;
   }
 
@@ -128,6 +130,7 @@
   .section {
     height: fit-content;
     padding-bottom: 2rem;
+    flex-direction: column;
   }
 
   .section h1 {
@@ -148,6 +151,13 @@
 
   .section .content-ubi {
     height: 80%;
+    flex-direction: column;
+  }
+
+  .section .content-ubi .ubi {
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
 
   .section .content-ubi .ubi .content-img img {
