--- a/css/innov8/main.css
+++ b/css/innov8/main.css
@@ -66,7 +66,7 @@ main #contain-1 .contain-text p {
 
 main #contain-1 .contain-service {
   display: flex;
-  width: 50%;
+  /* width: 50%; */
   height: 100%;
   position: relative;
   color: white;
