--- a/css/olimpia/contact.css
+++ b/css/olimpia/contact.css
@@ -110,12 +110,12 @@
   }
 
   .section .content-contact {
-    width: 100%;
+    /* width: 100%; */
     height: 40%;
   }
 
   .section .content-ubi {
-    width: 100%;
+    /* width: 100%; */
     height: 70%;
   }
 
