--- a/css/IFM/contact.css
+++ b/css/IFM/contact.css
@@ -1,8 +1,8 @@
-/* Estilos generales aplicables a todos los tamaños de pantalla */
 .section {
   display: flex;
   background-color: #080808ea;
   width: 100%;
+  height: 420px;
   color: white;
 }
 
@@ -12,7 +12,8 @@
 
 .section .content-contact {
   display: flex;
-  width: 100%;
+  width: 30%;
+  height: 100%;
   padding-top: 40px;
   padding-left: 100px;
   font-size: 24px;
@@ -27,7 +28,8 @@
 
 .section .content-ubi {
   display: flex;
-  width: 100%;
+  width: 70%;
+  height: 100%;
   flex-direction: column;
 }
 
@@ -38,6 +40,7 @@
 .section .content-ubi .ubi .content-img {
   display: flex;
   width: 25%;
+  height: 100%;
   padding-top: 40px;
   align-items: center;
   flex-direction: column;
@@ -82,7 +85,6 @@
   content: url(../../assets/images/Flag_of_the_United_States.png);
 }
 
-/* Estilos específicos para pantallas grandes (min-width: 1200px) */
 @media only screen and (min-width: 1200px) {
   .section {
     height: 420px;
@@ -91,17 +93,19 @@
   .section .content-contact {
     width: 30%;
     height: 100%;
-    padding-top: 40px;
-    padding-left: 100px;
   }
 
   .section .content-ubi {
     width: 70%;
     height: 100%;
   }
+
+  .section .content-ubi .ubi .content-img img {
+    width: 75%;
+    height: 75%;
+  }
 }
 
-/* Estilos específicos para pantallas medianas (min-width: 768px y max-width: 1199px) */
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   .section {
     height: 38rem;
@@ -111,17 +115,19 @@
   .section .content-contact {
     width: 100%;
     height: 40%;
-    padding-top: 40px;
-    padding-left: 100px;
   }
 
   .section .content-ubi {
     width: 100%;
     height: 70%;
   }
+
+  .section .content-ubi .ubi .content-img img {
+    width: 75%;
+    height: 75%;
+  }
 }
 
-/* Estilos específicos para pantallas pequeñas (max-width: 767px) */
 @media only screen and (max-width: 767px) {
   .section {
     height: fit-content;
@@ -144,8 +150,6 @@
   .section .content-contact {
     width: 100%;
     height: 20%;
-    padding-top: 40px;
-    padding-left: 100px;
   }
 
   .section .content-ubi {
