--- a/css/IFM/footer.css
+++ b/css/IFM/footer.css
@@ -1,33 +1,38 @@
 @import url(../index/colors.css);
 
-/* Estilos generales aplicables a todos los tamaños de pantalla */
 footer {
   display: flex;
   width: 100%;
+  height: 200px;
   background-color: #111111;
 }
 
 footer .contain {
   display: flex;
+  width: 50%;
+  height: 100%;
   justify-content: center;
   align-items: center;
+  color: rgb(145, 145, 145);
   flex-direction: column;
 }
 
 footer #redes {
   display: flex;
+  width: 35%;
+  height: 100%;
   justify-content: center;
   align-items: center;
   color: whitesmoke;
 }
 
 footer img {
+  width: 60px;
   padding: 10px;
   filter: invert(48%) sepia(93%) saturate(1392%) hue-rotate(184deg)
     brightness(94%) contrast(93%);
 }
 
-/* Estilos específicos para pantallas grandes (min-width: 1200px) */
 @media only screen and (min-width: 1200px) {
   footer {
     height: 200px;
@@ -36,6 +41,7 @@ footer img {
   footer .contain {
     width: 50%;
     height: 100%;
+
     color: rgb(145, 145, 145);
   }
 
@@ -49,7 +55,6 @@ footer img {
   }
 }
 
-/* Estilos específicos para pantallas medianas (min-width: 768px y max-width: 1199px) */
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   footer {
     height: 200px;
@@ -58,6 +63,7 @@ footer img {
   footer .contain {
     width: 50%;
     height: 100%;
+
     color: whitesmoke;
   }
 
@@ -71,10 +77,10 @@ footer img {
   }
 }
 
-/* Estilos específicos para pantallas pequeñas (max-width: 767px) */
 @media only screen and (max-width: 767px) {
   footer {
     height: 12.5rem;
+
     flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
@@ -83,7 +89,9 @@ footer img {
   footer .contain {
     width: 100%;
     height: 50%;
+
     color: rgb(145, 145, 145);
+
     text-align: center;
     padding: 0px 20px;
   }
