--- a/css/IFM/general.css
+++ b/css/IFM/general.css
@@ -3,8 +3,7 @@
 }
 
 body {
-  width: 99vw;
-  /* width: 100%; */
+  width: 100vw;
   height: 100%;
 }
 
@@ -13,3 +12,19 @@ body {
   width: 100%;
   height: 100%;
 }
+
+/* * {
+  font-family: sans-serif;
+}
+
+body {
+  width: 99vw;
+  -- width: 100%; --
+  height: 100%;
+}
+
+.contain-father {
+  position: relative;
+  width: 100%;
+  height: 100%;
+} */
