--- a/css/IFM/info.css
+++ b/css/IFM/info.css
@@ -1,6 +1,5 @@
 @import url(../index/colors.css);
 
-/* Estilos generales aplicables a todos los tamaños de pantalla */
 main {
   display: flex;
   width: 100%;
@@ -13,6 +12,8 @@ main #contain-1 {
   height: 100%;
   position: relative;
   display: flex;
+  /* align-items: center;
+justify-content: center; */
 }
 
 main #contain-1 #fondo {
@@ -37,9 +38,12 @@ main #contain-1::after {
 
 main #contain-1 .contain-text {
   display: flex;
+  width: 50%;
   height: 100%;
+  /* position: relative; */
   color: white;
   flex-direction: column;
+  /* text-align: left; */
   z-index: 1;
   padding-right: 15%;
   padding-left: 5%;
@@ -51,8 +55,18 @@ main #contain-1 .contain-text h1 {
   color: white;
 }
 
+main #contain-1 .contain-text h1 {
+  font-size: 40px;
+  color: var(--dorado);
+}
+
+main #contain-1 .contain-text p {
+  font-size: 20px;
+}
+
 main #contain-1 .contain-service {
   display: flex;
+  width: 50%;
   height: 100%;
   position: relative;
   color: white;
@@ -60,7 +74,6 @@ main #contain-1 .contain-service {
   z-index: 1;
   justify-content: space-around;
 }
-
 main #contain-1 .contain-service .button-container {
   display: flex;
 }
@@ -69,72 +82,59 @@ main #contain-1 .contain-service .button-container .content {
   opacity: 0;
   transform: translateX(100%);
   transition: all 0.5s ease-in-out;
+  /* transform: translate(50%, 0%);
+top: 50%; */
   left: 100%;
   z-index: 0;
   padding-left: 40px;
 }
-
+/* Preguntar diseño */
 /* main #contain-1 .contain-service .button-container:hover .content {
-  opacity: 1;
-  transform: translateX(0);
+opacity: 1;
+transform: translateX(0);
 } */
-
 main #contain-1 .contain-service .button-container:focus-within .content {
   opacity: 1;
   transform: translateX(0);
 }
-
 main #contain-1 .contain-service .button-container button {
   background: none;
   border: none;
 }
-
 main #contain-1 .contain-service .button-container button:hover {
   cursor: pointer;
 }
 
-/* Estilos específicos para pantallas grandes (min-width: 1200px) */
 @media only screen and (min-width: 1200px) {
-  
   main #contain-1 .contain-text {
     width: 50%;
+    height: 100%;
   }
 
   main #contain-1 .contain-text h1 {
     font-size: 40px;
-    color: var(--dorado);
   }
 
   main #contain-1 .contain-text p {
     font-size: 20px;
   }
-
-  main #contain-1 .contain-service {
-    width: 50%;
-  }
 }
 
-/* Estilos específicos para pantallas medianas (min-width: 768px y max-width: 1199px) */
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   main #contain-1 .contain-text {
     width: 50%;
+    height: 100%;
   }
 
   main #contain-1 .contain-text h1 {
     font-size: 40px;
-    color: var(--dorado);
   }
 
   main #contain-1 .contain-text p {
     font-size: 20px;
   }
-
-  main #contain-1 .contain-service {
-    width: 50%;
-  }
 }
 
-/* Estilos específicos para pantallas pequeñas (max-width: 767px) */
 @media only screen and (max-width: 767px) {
   main #contain-1 {
     flex-direction: column;
@@ -149,15 +149,9 @@ main #contain-1 .contain-service .button-container button:hover {
 
   main #contain-1 .contain-text h1 {
     font-size: 20px;
-    color: var(--dorado);
   }
 
   main #contain-1 .contain-text p {
     font-size: 10px;
-  }
-
-  main #contain-1 .contain-service {
-    width: 100%;
-    height: 50%;
   }
 }
