--- a/css/IFM/nav.css
+++ b/css/IFM/nav.css
@@ -19,6 +19,7 @@ nav {
 }
 
 .logo img {
+  height: 70px;
   margin-left: 20px;
 }
 
@@ -26,7 +27,7 @@ nav {
   display: flex;
   width: 100%;
   height: 100%;
-  justify-content: center;
+  padding-left: 22rem;
 }
 
 .botones a {
@@ -55,6 +56,7 @@ nav {
 }
 
 /* Back */
+
 .back button {
   border: none;
   background: none;
@@ -68,33 +70,44 @@ nav {
   z-index: 2;
   background-color: var(--azul_marino);
   border-radius: 100%;
-  transition: background-color 0.1s;
+  top: 90%;
+  left: 95%;
 }
 
 .back button:hover {
   background-color: #024283;
+  transition: 0.1s;
 }
 
 nav #languageToggle {
   border: none;
   background: none;
   cursor: pointer;
+  width: 100px;
+  height: 50px;
   display: flex;
+  font-size: 15px;
   justify-content: center;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.623);
   border-radius: 5px;
-  transition: background-color 0.25s;
 }
 
 nav #languageToggle:hover {
   background-color: #024283;
   color: white;
+  transition: 0.25s;
 }
 
 @media only screen and (min-width: 1200px) {
+  nav {
+    width: 100%;
+    z-index: 1000;
+  }
+
   .logo img {
     height: 70px;
+    margin-left: 20px;
   }
 
   .botones {
@@ -102,6 +115,8 @@ nav #languageToggle:hover {
   }
 
   .back button {
+    width: 50px;
+    height: 50px;
     top: 90%;
     left: 95%;
   }
@@ -109,20 +124,28 @@ nav #languageToggle:hover {
   nav #languageToggle {
     width: 100px;
     height: 50px;
-    font-size: 15px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
+  nav {
+    width: 100vw;
+    z-index: 10;
+  }
+
   .logo img {
     height: 70px;
+    margin-left: 20px;
   }
 
   .botones {
-    padding-left: 0;
+    justify-content: center;
   }
 
   .back button {
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
     top: 90%;
     left: 95%;
   }
@@ -130,18 +153,23 @@ nav #languageToggle:hover {
   nav #languageToggle {
     width: 100px;
     height: 50px;
-    font-size: 15px;
   }
 }
 
 @media only screen and (max-width: 767px) {
   nav {
+    width: 100%;
+    z-index: 1000;
     font-size: 10px;
   }
 
   .logo img {
-    height: 0;
-    margin-left: 0;
+    height: 0px;
+    margin-left: 0px;
+  }
+
+  .botones {
+    justify-content: center;
   }
 
   .back button {
