--- a/css/index/main.css
+++ b/css/index/main.css
@@ -1,78 +1,392 @@
-main {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  justify-content: center;
-  align-items: center;
-  position: relative;
+@media only screen and (min-width: 1200px) {
+  main {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+
+  main .image-contain {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    filter: grayscale();
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+    z-index: 1;
+  }
+
+  main .image-contain img {
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    object-fit: cover;
+  }
+
+  .flash {
+    opacity: 0.5 !important;
+  }
+
+  main .logo-contain {
+    display: flex;
+    position: absolute;
+    width: 70%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 2;
+    box-sizing: border-box;
+  }
+
+  /* Borrar */
+
+  main #position-left {
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 2%;
+    justify-content: end;
+    align-items: center;
+    z-index: 3;
+  }
+
+  main #position-right {
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 80%;
+    justify-content: start;
+    align-items: center;
+    z-index: 3;
+    padding: 15px 20px;
+  }
+
+  #sidePanel2 {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 500px;
+    height: 100%;
+    background-color: #181818ef;
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+    transform: translateX(100%);
+    transition: transform 0.5s ease;
+    padding: 20px;
+    z-index: 5;
+    font-size: 25px;
+    padding: 40px;
+    color: #c0c0c0;
+  }
+
+  #sidePanel {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 500px;
+    height: 100%;
+    background-color: #181818ef;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
+    transform: translateX(-100%);
+    transition: transform 0.5s ease;
+    padding: 20px;
+    z-index: 5;
+    font-size: 25px;
+    padding: 40px;
+    color: #c0c0c0;
+  }
+
+  /* hasta aqui se borra */
+
+  main .logo-contain img {
+    width: 50%;
+    height: 70%;
+  }
+
+  main .logo-contain .buttoms {
+    display: flex;
+  }
+
+  main .logo-contain .buttoms a,
+  main button {
+    position: relative;
+    display: inline-block;
+    padding: 15px 30px;
+    color: #ffffff;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    text-decoration: none;
+    font-size: 24px;
+    overflow: hidden;
+    transition: 0.2s;
+  }
 }
 
-main .image-contain {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  position: absolute;
-  top: 0;
-  left: 0;
-  filter: grayscale();
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-  z-index: 1;
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  main {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+
+  main .image-contain {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    filter: grayscale();
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+    z-index: 1;
+  }
+
+  main .image-contain img {
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    object-fit: cover;
+  }
+
+  .flash {
+    opacity: 0.5 !important;
+  }
+
+  main .logo-contain {
+    display: flex;
+    position: absolute;
+    width: 80%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 2;
+    box-sizing: border-box;
+  }
+
+  /* Contenedores laterales */
+
+  main #position-left {
+    display: flex;
+    position: absolute;
+    top: 40%;
+    left: 2%;
+    justify-content: end;
+    align-items: center;
+    z-index: 3;
+  }
+
+  main #position-right {
+    display: flex;
+    position: absolute;
+    top: 40%;
+    left: 80%;
+    justify-content: start;
+    align-items: center;
+    z-index: 3;
+  }
+
+  #sidePanel2 {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 500px;
+    height: 100%;
+    background-color: #181818ef;
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+    transform: translateX(100%);
+    transition: transform 0.5s ease;
+    padding: 20px;
+    z-index: 5;
+    font-size: 25px;
+    padding: 40px;
+    color: #c0c0c0;
+  }
+
+  #sidePanel {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 500px;
+    height: 100%;
+    background-color: #181818ef;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
+    transform: translateX(-100%);
+    transition: transform 0.5s ease;
+    padding: 20px;
+    z-index: 5;
+    font-size: 25px;
+    padding: 40px;
+    color: #c0c0c0;
+  }
+
+  /* hasta aqui se borra */
+
+  main .logo-contain img {
+    width: 50%;
+    height: 70%;
+  }
+
+  main .logo-contain .buttoms {
+    display: flex;
+  }
+
+  main .logo-contain .buttoms a,
+  main button {
+    position: relative;
+    display: inline-block;
+    padding: 15px 10px;
+    color: #ffffff;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    text-decoration: none;
+    font-size: 18px;
+    overflow: hidden;
+    transition: 0.2s;
+    text-align: center;
+  }
 }
 
-main .image-contain img {
-  width: 50%;
-  height: 100%;
-  overflow: hidden;
-  object-fit: cover;
-}
+@media only screen and (max-width: 767px) {
+  main {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
 
-.flash {
-  opacity: 0.5 !important;
-}
+  main .image-contain {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    filter: grayscale();
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+    z-index: 1;
+    flex-direction: column;
+  }
 
-main .logo-contain {
-  display: flex;
-  position: absolute;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  z-index: 2;
-  box-sizing: border-box;
-}
+  main .image-contain img {
+    width: 100%;
+    height: 50%;
+    overflow: hidden;
+    object-fit: cover;
+  }
 
-main .logo-contain img {
-  width: 50%;
-  height: 70%;
-}
+  .flash {
+    opacity: 0.5 !important;
+  }
 
-main .logo-contain .buttoms {
-  display: flex;
-}
+  main .logo-contain {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    height: 50%;
+    bottom: 10rem;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 2;
+    text-align: center;
+    box-sizing: border-box;
+  }
 
-main .logo-contain .buttoms a,
-main button {
-  position: relative;
-  display: inline-block;
-  padding: 15px 30px;
-  color: #ffffff;
-  text-transform: uppercase;
-  letter-spacing: 4px;
-  text-decoration: none;
-  font-size: 24px;
-  overflow: hidden;
-  transition: 0.2s;
-}
+  /* Borrar */
 
-main #position-left,
-main #position-right {
-  border: none;
-  background: none;
-  display: flex;
-  position: absolute;
-  z-index: 3;
-  align-items: center;
+  main #position-left {
+    display: flex;
+    position: absolute;
+    left: 0;
+    top: 10rem;
+    align-items: center;
+    z-index: 3;
+  }
+
+  main #position-right {
+    display: flex;
+    position: absolute;
+    right: 0;
+    top: 10rem;
+    align-items: center;
+    z-index: 3;
+  }
+
+  #sidePanel2 {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 80%;
+    height: 100%;
+    background-color: #181818ef;
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+    transform: translateX(100%);
+    transition: transform 0.5s ease;
+    padding: 20px;
+    z-index: 5;
+    font-size: 25px;
+    padding: 40px;
+    color: #c0c0c0;
+  }
+
+  #sidePanel {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 65%;
+    height: 100%;
+    background-color: #181818ef;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
+    transform: translateX(-100%);
+    transition: transform 0.5s ease;
+    padding: 20px;
+    z-index: 5;
+    font-size: 25px;
+    padding: 40px;
+    color: #c0c0c0;
+  }
+
+  /* hasta aqui se borra */
+
+  main .logo-contain img {
+    width: 50%;
+    height: 70%;
+  }
+
+  main .logo-contain .buttoms {
+    display: flex;
+    flex-direction: column;
+  }
+
+  main .logo-contain .buttoms a,
+  main button {
+    position: relative;
+    display: inline-block;
+    padding: 15px 30px;
+    color: #ffffff;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    text-decoration: none;
+    font-size: 10px;
+    overflow: hidden;
+    transition: 0.2s;
+  }
 }
 
 main #position-left:hover,
@@ -84,6 +398,12 @@ main #position-right:hover {
   cursor: pointer;
 }
 
+main #position-left,
+main #position-right {
+  border: none;
+  background: none;
+}
+
 main .logo-contain .buttoms a:hover {
   color: #255784;
   background-color: #2196f3;
@@ -92,10 +412,13 @@ main .logo-contain .buttoms a:hover {
 }
 
 /* Recorrido de boton */
+
 main .logo-contain .buttoms a span {
   position: absolute;
   display: block;
 }
+
+/* TOP SPAN */
 
 main .logo-contain .buttoms a span:nth-child(1) {
   top: 0;
@@ -109,6 +432,8 @@ main .logo-contain .buttoms a:hover span:nth-child(1) {
   left: 100%;
   transition: 1s;
 }
+
+/* BOTTOM SPAN */
 
 main .logo-contain .buttoms a span:nth-child(3) {
   bottom: 0;
@@ -124,6 +449,8 @@ main .logo-contain .buttoms a:hover span:nth-child(3) {
   transition-delay: 0.5s;
 }
 
+/* RIGHT SPAN */
+
 main .logo-contain .buttoms a span:nth-child(2) {
   top: -100%;
   right: 0;
@@ -137,6 +464,8 @@ main .logo-contain .buttoms a:hover span:nth-child(2) {
   transition: 1s;
   transition-delay: 0.25s;
 }
+
+/* LEFT SPAN */
 
 main .logo-contain .buttoms a span:nth-child(4) {
   bottom: -100%;
@@ -152,33 +481,10 @@ main .logo-contain .buttoms a:hover span:nth-child(4) {
   transition-delay: 0.75s;
 }
 
-#sidePanel2,
-#sidePanel {
-  position: fixed;
-  top: 0;
-  width: 500px;
-  height: 100%;
-  background-color: #181818ef;
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
-  transform: translateX(100%);
-  transition: transform 0.5s ease;
-  padding: 40px;
-  z-index: 5;
-  font-size: 25px;
-  color: #c0c0c0;
+#sidePanel2.show {
+  transform: translateX(0);
 }
 
-#sidePanel {
-  left: 0;
-  transform: translateX(-100%);
-}
-
-#sidePanel2 {
-  right: 0;
-  transform: translateX(100%);
-}
-
-#sidePanel2.show,
 #sidePanel.show {
   transform: translateX(0);
 }
@@ -223,96 +529,4 @@ main .logo-contain .buttoms a:hover span:nth-child(4) {
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
   z-index: 4;
-}
-
-/* Estilos específicos de tamaño de pantalla */
-@media only screen and (min-width: 1200px) {
-  main .logo-contain {
-    width: 70%;
-  }
-
-  main #position-left {
-    top: 50%;
-    left: 2%;
-    justify-content: end;
-  }
-
-  main #position-right {
-    top: 50%;
-    left: 80%;
-    justify-content: start;
-    padding: 15px 20px;
-  }
-
-  main .logo-contain .buttoms a,
-  main button {
-    padding: 15px 30px;
-    font-size: 24px;
-  }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 1199px) {
-  main .logo-contain {
-    width: 80%;
-  }
-
-  main #position-left {
-    top: 40%;
-    left: 2%;
-    justify-content: end;
-  }
-
-  main #position-right {
-    top: 40%;
-    left: 80%;
-    justify-content: start;
-  }
-
-  main .logo-contain .buttoms a,
-  main button {
-    padding: 15px 10px;
-    font-size: 18px;
-  }
-}
-
-@media only screen and (max-width: 767px) {
-  main .image-contain {
-    flex-direction: column;
-  }
-
-  main .image-contain img {
-    width: 100%;
-    height: 50%;
-  }
-
-  main .logo-contain {
-    width: 100%;
-    height: 50%;
-    bottom: 10rem;
-    text-align: center;
-  }
-
-  main #position-left {
-    left: 0;
-    top: 10rem;
-  }
-
-  main #position-right {
-    right: 0;
-    top: 10rem;
-  }
-
-  #sidePanel2 {
-    width: 80%;
-  }
-
-  #sidePanel {
-    width: 65%;
-  }
-
-  main .logo-contain .buttoms a,
-  main button {
-    padding: 15px 30px;
-    font-size: 10px;
-  }
 }
