--- a/css/innov8/home.css
+++ b/css/innov8/home.css
@@ -1,7 +1,7 @@
-/* Estilos generales (no dependen del tamaño de la pantalla) */
 header {
   display: flex;
   width: 100%;
+  height: 974px;
   background-color: rgba(255, 255, 255, 0);
   justify-content: center;
   align-items: center;
@@ -24,21 +24,18 @@ header .static-image {
   filter: brightness(70%);
 }
 
-/* Estilos para pantallas grandes */
 @media only screen and (min-width: 1200px) {
   header {
     height: 974px;
   }
 }
 
-/* Estilos para pantallas medianas */
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   header {
     height: 100vh;
   }
 }
 
-/* Estilos para pantallas pequeñas */
 @media only screen and (max-width: 767px) {
   header {
     height: 100vh;
