--- a/css/innov8/main.css
+++ b/css/innov8/main.css
@@ -1,4 +1,5 @@
-/* Estilos generales (no dependen del tamaño de la pantalla) */
+@import url(../index/colors.css);
+
 main {
   display: flex;
   width: 100%;
@@ -11,6 +12,8 @@ main #contain-1 {
   height: 100%;
   position: relative;
   display: flex;
+  /* align-items: center;
+justify-content: center; */
 }
 
 main #contain-1 #fondo {
@@ -35,8 +38,12 @@ main #contain-1::after {
 
 main #contain-1 .contain-text {
   display: flex;
+  width: 50%;
+  height: 100%;
+  /* position: relative; */
   color: white;
   flex-direction: column;
+  /* text-align: left; */
   z-index: 1;
   padding-right: 15%;
   padding-left: 5%;
@@ -48,9 +55,18 @@ main #contain-1 .contain-text h1 {
   color: white;
 }
 
+main #contain-1 .contain-text h1 {
+  font-size: 40px;
+  color: var(--naranja_neon);
+}
+
+main #contain-1 .contain-text p {
+  font-size: 20px;
+}
+
 main #contain-1 .contain-service {
   display: flex;
-  /* width: 50%; */
+  width: 50%;
   height: 100%;
   position: relative;
   color: white;
@@ -67,10 +83,19 @@ main #contain-1 .contain-service .button-container .content {
   opacity: 0;
   transform: translateX(100%);
   transition: all 0.5s ease-in-out;
+  /* transform: translate(50%, 0%);
+top: 50%; */
   left: 100%;
   z-index: 0;
   padding-left: 40px;
 }
+
+/* Preguntar diseño */
+
+/* main #contain-1 .contain-service .button-container:hover .content {
+opacity: 1;
+transform: translateX(0);
+} */
 
 main #contain-1 .contain-service .button-container:focus-within .content {
   opacity: 1;
@@ -86,7 +111,6 @@ main #contain-1 .contain-service .button-container button:hover {
   cursor: pointer;
 }
 
-/* Estilos para pantallas grandes */
 @media only screen and (min-width: 1200px) {
   main {
     height: 700px;
@@ -94,6 +118,12 @@ main #contain-1 .contain-service .button-container button:hover {
 
   main #contain-1 .contain-text {
     width: 50%;
+    height: 100%;
+  }
+
+  main #contain-1 .contain-text p,
+  main #contain-1 .contain-text h1 {
+    color: white;
   }
 
   main #contain-1 .contain-text h1 {
@@ -106,10 +136,14 @@ main #contain-1 .contain-service .button-container button:hover {
   }
 }
 
-/* Estilos para pantallas medianas */
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   main {
     height: 43.75rem;
+  }
+
+  main #contain-1 .contain-text {
+    width: 50%;
+    height: 100%;
   }
 
   main #contain-1 .contain-text h1 {
@@ -119,10 +153,10 @@ main #contain-1 .contain-service .button-container button:hover {
 
   main #contain-1 .contain-text p {
     font-size: 18px;
+    color: white;
   }
 }
 
-/* Estilos para pantallas pequeñas */
 @media only screen and (max-width: 767px) {
   main {
     height: 700px;
@@ -135,8 +169,14 @@ main #contain-1 .contain-service .button-container button:hover {
   main #contain-1 .contain-text {
     width: 100%;
     height: 50%;
-    padding-right: 50px;
+
     align-items: center;
+    padding-right: 50px;
+  }
+
+  main #contain-1 .contain-text p,
+  main #contain-1 .contain-text h1 {
+    color: white;
   }
 
   main #contain-1 .contain-text h1 {
@@ -146,9 +186,5 @@ main #contain-1 .contain-service .button-container button:hover {
 
   main #contain-1 .contain-text p {
     font-size: 10px;
-  }
-
-  main #contain-1 .contain-service {
-    width: 50%;
   }
 }
