--- a/css/olimpia/contact.css
+++ b/css/olimpia/contact.css
@@ -1,8 +1,8 @@
-/* Estilos generales (no cambian en @media) */
 .section {
   display: flex;
   background-color: #191919;
   width: 100%;
+  height: 420px;
   color: white;
 }
 
@@ -12,7 +12,8 @@
 
 .section .content-contact {
   display: flex;
-  width: 100%;
+  width: 30%;
+  height: 100%;
   padding-top: 40px;
   padding-left: 100px;
   font-size: 24px;
@@ -27,7 +28,8 @@
 
 .section .content-ubi {
   display: flex;
-  width: 100%;
+  width: 70%;
+  height: 100%;
   flex-direction: column;
 }
 
@@ -38,15 +40,22 @@
 .section .content-ubi .ubi .content-img {
   display: flex;
   width: 25%;
+  height: 100%;
   padding-top: 40px;
   align-items: center;
   flex-direction: column;
 }
 
 .section .content-ubi .ubi .content-img img {
+  width: 75%;
+  height: 75%;
   padding-bottom: 20px;
   border-radius: 5px;
   transition: transform 0.3s ease;
+}
+
+.section .content-ubi .ubi .content-img img:hover {
+  transform: translateY(-10px);
 }
 
 .section .content-ubi .title {
@@ -72,7 +81,6 @@
   content: url(../../assets/images/Flag_of_the_United_States.png);
 }
 
-/* Estilos específicos para pantallas grandes */
 @media only screen and (min-width: 1200px) {
   .section {
     height: 420px;
@@ -92,26 +100,22 @@
     width: 75%;
     height: 75%;
   }
-
-  .section .content-ubi .ubi .content-img img:hover {
-    transform: translateY(-10px);
-  }
 }
 
-/* Estilos específicos para pantallas medianas */
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
   .section {
     height: 38rem;
+
     flex-direction: column;
   }
 
   .section .content-contact {
-    /* width: 100%; */
+    width: 100%;
     height: 40%;
   }
 
   .section .content-ubi {
-    /* width: 100%; */
+    width: 100%;
     height: 70%;
   }
 
@@ -119,17 +123,14 @@
     width: 75%;
     height: 75%;
   }
-
-  .section .content-ubi .ubi .content-img img:hover {
-    transform: translateY(-10px);
-  }
 }
 
-/* Estilos específicos para pantallas pequeñas */
 @media only screen and (max-width: 767px) {
   .section {
+    /* height: 80rem; */
     height: fit-content;
     padding-bottom: 2rem;
+
     flex-direction: column;
   }
 
@@ -146,12 +147,13 @@
   }
 
   .section .content-contact {
+    width: 100%;
     height: 20%;
   }
 
   .section .content-ubi {
+    width: 100%;
     height: 80%;
-    flex-direction: column;
   }
 
   .section .content-ubi .ubi {
@@ -163,9 +165,5 @@
   .section .content-ubi .ubi .content-img img {
     width: 250%;
     height: 100%;
-  }
-
-  .section .content-ubi .ubi .content-img img:hover {
-    transform: translateY(-10px);
   }
 }
