--- a/css/olimpia/info.css
+++ b/css/olimpia/info.css
@@ -1,7 +1,9 @@
-/* Estilos generales (no cambian en @media) */
+@import url(../index/colors.css);
+
 main {
   display: flex;
   width: 100%;
+  height: 700px;
   background-color: white;
 }
 
@@ -10,6 +12,8 @@ main #contain-1 {
   height: 100%;
   position: relative;
   display: flex;
+  /* align-items: center;
+justify-content: center; */
 }
 
 main #contain-1 #fondo {
@@ -35,8 +39,12 @@ main #contain-1::after {
 
 main #contain-1 .contain-text {
   display: flex;
+  width: 50%;
+  height: 100%;
+  /* position: relative; */
   color: white;
   flex-direction: column;
+  /* text-align: left; */
   z-index: 1;
   padding-right: 15%;
   padding-left: 5%;
@@ -46,6 +54,15 @@ main #contain-1 .contain-text {
 main #contain-1 .contain-text p,
 main #contain-1 .contain-text h1 {
   color: white;
+}
+
+main #contain-1 .contain-text h1 {
+  font-size: 40px;
+  color: var(--azul_real);
+}
+
+main #contain-1 .contain-text p {
+  font-size: 20px;
 }
 
 main #contain-1 .contain-service {
@@ -67,10 +84,19 @@ main #contain-1 .contain-service .button-container .content {
   opacity: 0;
   transform: translateX(100%);
   transition: all 0.5s ease-in-out;
+  /* transform: translate(50%, 0%);
+top: 50%; */
   left: 100%;
   z-index: 0;
   padding-left: 40px;
 }
+
+/* Preguntar diseño */
+
+/* main #contain-1 .contain-service .button-container:hover .content {
+opacity: 1;
+transform: translateX(0);
+} */
 
 main #contain-1 .contain-service .button-container:focus-within .content {
   opacity: 1;
@@ -86,60 +112,21 @@ main #contain-1 .contain-service .button-container button:hover {
   cursor: pointer;
 }
 
-/* Estilos específicos para pantallas grandes */
 @media only screen and (min-width: 1200px) {
-  main {
-    height: 700px;
-  }
-
   main #contain-1 .contain-text {
     width: 50%;
     height: 100%;
-    padding-right: 15%;
-    padding-left: 5%;
-    justify-content: center;
-  }
-
-  main #contain-1 .contain-text h1 {
-    font-size: 40px;
-    color: var(--azul_real);
-  }
-
-  main #contain-1 .contain-text p {
-    font-size: 20px;
   }
 }
 
-/* Estilos específicos para pantallas medianas */
 @media only screen and (min-width: 700px) and (max-width: 1199px) {
-  main {
-    height: 700px;
-  }
-
   main #contain-1 .contain-text {
     width: 50%;
     height: 100%;
-    padding-right: 15%;
-    padding-left: 5%;
-    justify-content: center;
-  }
-
-  main #contain-1 .contain-text h1 {
-    font-size: 40px;
-    color: var(--azul_real);
-  }
-
-  main #contain-1 .contain-text p {
-    font-size: 20px;
   }
 }
 
-/* Estilos específicos para pantallas pequeñas */
 @media only screen and (max-width: 767px) {
-  main {
-    height: 700px;
-  }
-
   main #contain-1 {
     flex-direction: column;
   }
@@ -147,18 +134,8 @@ main #contain-1 .contain-service .button-container button:hover {
   main #contain-1 .contain-text {
     width: 100%;
     height: 50%;
-    padding-right: 50px;
+
     align-items: center;
-    padding-left: 5%;
-    justify-content: center;
-  }
-
-  main #contain-1 .contain-text h1 {
-    font-size: 40px;
-    color: var(--azul_real);
-  }
-
-  main #contain-1 .contain-text p {
-    font-size: 10px;
+    padding-right: 50px;
   }
 }
