--- a/css/olimpia/nav.css
+++ b/css/olimpia/nav.css
@@ -1,4 +1,5 @@
-/* Estilos generales (no cambian en @media) */
+@import url(../index/colors.css);
+
 nav {
   position: fixed;
   top: 0;
@@ -50,11 +51,14 @@ nav {
   color: var(--rojo); /* Color con scrolled */
 }
 
-/* Back button styles */
+/* Back */
+
 .back button {
   border: none;
   background: none;
   cursor: pointer;
+  width: 50px;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -62,32 +66,41 @@ nav {
   z-index: 2;
   background-color: var(--azul_real);
   border-radius: 100%;
-  transition: background-color 0.1s;
+  top: 90%;
+  left: 95%;
 }
 
 .back button:hover {
   background-color: #5477e2;
+  transition: 0.1s;
 }
 
 nav #languageToggle {
   border: none;
   background: none;
   cursor: pointer;
+  width: 100px;
+  height: 50px;
   display: flex;
+  font-size: 15px;
   justify-content: center;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.623);
   border-radius: 5px;
-  transition: background-color 0.25s;
 }
 
 nav #languageToggle:hover {
   background-color: var(--rojo);
   color: white;
+  transition: 0.25s;
 }
 
-/* Estilos específicos para pantallas grandes */
 @media only screen and (min-width: 1200px) {
+  .logo img {
+    height: 70px;
+    margin-left: 20px;
+  }
+
   .back button {
     width: 50px;
     height: 50px;
@@ -98,12 +111,15 @@ nav #languageToggle:hover {
   nav #languageToggle {
     width: 100px;
     height: 50px;
-    font-size: 15px;
   }
 }
 
-/* Estilos específicos para pantallas medianas */
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
+  .logo img {
+    height: 70px;
+    margin-left: 20px;
+  }
+
   .back button {
     width: 50px;
     height: 50px;
@@ -114,12 +130,14 @@ nav #languageToggle:hover {
   nav #languageToggle {
     width: 100px;
     height: 50px;
-    font-size: 15px;
   }
 }
 
-/* Estilos específicos para pantallas pequeñas */
 @media only screen and (max-width: 767px) {
+  nav {
+    font-size: 10px;
+  }
+
   .logo img {
     height: 0px;
     margin-left: 0px;
