Se creo el nuevo apartado para Formulario en IFM, Innov8 y Olimpia (Ahora se llama Academy Extension), ademas de optimizar el Responsive del index (Innovative Group)

--- a/css/innov8/main.css
+++ b/css/innov8/main.css
@@ -90,12 +90,10 @@ top: 50%; */
   padding-left: 40px;
 }
 
-/* Preguntar diseño */
-
-/* main #contain-1 .contain-service .button-container:hover .content {
-opacity: 1;
-transform: translateX(0);
-} */
+main #contain-1 .contain-service .button-container:hover .content {
+  opacity: 1;
+  transform: translateX(0);
+  }
 
 main #contain-1 .contain-service .button-container:focus-within .content {
   opacity: 1;
