--- a/css/innov8/responsive.css
+++ b/css/innov8/responsive.css
@@ -1,6 +1,7 @@
 @import url(../index/colors.css);
 @import url(article.css);
 @import url(footer.css);
+@import url(formulario.css);
 @import url(general.css);
 @import url(home.css);
 @import url(main.css);
