--- a/css/olimpia/formulario.css
+++ b/css/olimpia/formulario.css
@@ -1,30 +1,28 @@
 @import url(../index/colors.css);
 
-article {
+.formulario {
   display: flex;
   width: 100%;
   background-color: white;
   justify-content: center;
   align-items: center;
   font-family: "Inter", sans-serif;
-  /* background-image: url("https://i.pinimg.com/564x/68/1b/b2/681bb2fe7f4e8a04ca372aaaa3e15a06.jpg");
   background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover; */
-  /* background-size: cover; */
+  background-size: cover;
+  opacity: 95%;
 }
 
-article #contain1 {
+.formulario #contain1 {
   width: 30%;
   height: 100%;
 }
 
-article #contain2 {
+.formulario #contain2 {
   width: 70%;
   height: 100%;
 }
 
-article #contain2 form {
+.formulario #contain2 form {
   display: flex;
   width: 100%;
   height: 100%;
@@ -33,26 +31,26 @@ article #contain2 form {
   flex-direction: column;
 }
 
-article #contain2 form #name,
-article #contain2 form #email,
-article #contain2 form #subject {
+.formulario #contain2 form #name,
+.formulario #contain2 form #email,
+.formulario #contain2 form #subject {
   border-radius: 5px;
   border: 1px solid black;
   width: 15rem;
   height: 2rem;
 }
 
-article #contain2 form textarea {
+.formulario #contain2 form textarea {
   border-radius: 5px;
   border: 1px solid black;
   width: 25rem;
   height: 10rem;
 }
 
-article #contain2 form #submit {
+.formulario #contain2 form #submit {
   background: none;
   border: none;
-  background-color: var(--azul_marino);
+  background-color: var(--azul_real);
   color: white;
   width: 12rem;
   height: 2rem;
@@ -60,24 +58,24 @@ article #contain2 form #submit {
   border-radius: 5px;
 }
 
-article #contain2 form #submit:hover {
+.formulario #contain2 form #submit:hover {
   cursor: pointer;
-  background-color: #003f7e;
+  background-color: #4b78ff;
 }
 
 @media only screen and (min-width: 1200px) {
-  article {
+  .formulario {
     height: 50rem;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1199px) {
-  article {
+  .formulario {
     height: 50rem;
   }
 }
 @media only screen and (max-width: 767px) {
-  article {
+  .formulario {
     height: 50rem;
   }
 }
