--- a/css/olimpia/general.css
+++ b/css/olimpia/general.css
@@ -2,12 +2,13 @@
   font-family: sans-serif;
 }
 
-body{
+body {
   width: 100vw;
   height: 100%;
+  overflow-x: hidden;
 }
 
-.contain-father{
+.contain-father {
   position: relative;
   width: 100%;
   height: 100%;
