--- a/css/olimpia/responsive.css
+++ b/css/olimpia/responsive.css
@@ -2,6 +2,7 @@
 @import url(article.css);
 @import url(contact.css);
 @import url(footer.css);
+@import url(formulario.css);
 @import url(general.css);
 @import url(home.css);
 @import url(info.css);
