Se agrego nuevo diseño al boton de cambio de idioma en todas las paginas

--- a/css/olimpia/nav.css
+++ b/css/olimpia/nav.css
@@ -89,6 +89,13 @@ nav #languageToggle {
   border-radius: 5px;
 }
 
+nav #languageToggle #languageImage {
+  display: flex;
+  width: 15px;
+  height: 12px;
+  border-radius: 100%;
+}
+
 nav #languageToggle:hover {
   background-color: var(--rojo);
   color: white;
