--- a/css/IFM/nav.css
+++ b/css/IFM/nav.css
@@ -93,6 +93,13 @@ nav #languageToggle {
   border-radius: 5px;
 }
 
+nav #languageToggle #languageImage {
+  display: flex;
+  width: 15px;
+  height: 12px;
+  border-radius: 100%;
+}
+
 nav #languageToggle:hover {
   background-color: #024283;
   color: white;
