--- a/css/IFM/contact.css
+++ b/css/IFM/contact.css
@@ -4,6 +4,8 @@
   width: 100%;
   height: 420px;
   color: white;
+  justify-content: center;
+  align-items: center;
 }
 
 .section h1 {
@@ -12,7 +14,7 @@
 
 .section .content-ubi {
   display: flex;
-  width: 70%;
+  width: 100%;
   height: 100%;
   flex-direction: column;
 }
